# basilisk

./: .gitignore  Basilisk.sln  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  PLAN.md  README.md  THIRD_PARTY_LICENSES.txt  basilisk.sln  calibration_games.pgn  calibration_results.txt  diag.txt  diag_q.txt  loop_diag.txt  test_input.txt  test_output.txt  test_output2.txt  uci_specification.txt  user_dev_guide.md
.github/workflows/: release.yml
.zed/: build.ps1  tasks.json
Basilisk/: Basilisk.cpp  Basilisk.vcxproj  Basilisk.vcxproj.filters  Board.cpp  Constants.h  Engine.cpp  Engine.h  Parameters.cpp  Piece.h  UciProtocol.cpp  UciProtocol.h
basilisk/: Program.cs
cmake/: pgo-build.cmake  pgo-train.epd
src/: Basilisk.cpp  Board.cpp  Board.h  Constants.h  Engine.cpp  Engine.h  EngineCommand.h  EvalParams.h  Parameters.cpp  Parameters.h  SearchParams.h  UciOutput.h  UciProtocol.cpp  UciProtocol.h  attacks.cpp  attacks.h  bench.cpp  bench.h  bitboard.cpp  bitboard.h  eval.cpp  eval.h  main.cpp  move.cpp  move.h  search.cpp  search.h  syzygy.cpp  syzygy.h  tt.h  types.h  zobrist.cpp  zobrist.h
tests/: board_performance.cpp  endgames.epd  test_board.cpp  test_endgames.cpp  test_engine_ponder.cpp  test_engine_threading.cpp  test_eval.cpp  test_harness.h  test_move.cpp  test_search.cpp  test_tt.cpp  test_uci_protocol.cpp
tools/: build_test.ps1  datagen.ps1  gauntlet.ps1  setup_spsa.ps1  setup_tools.ps1  sprt.ps1
tools/spsa_configs/: README.md  config_combined.json  config_lmr.json  config_pruning.json  config_tm.json  config_wave2.json  cutechess.json
tools/texel/: README.md  bake.py  extract.py  extract_parallel.py  import_beast.py  sample_fens.py  test_edge.csv  test_positions.csv  tuner.cpp
